modernize getItemRewards